	* Increase range of properly fired missiles, and crossbow range no 
	  longer depends on strength (from SporkHack)
	* Require high strength for crossbow multishot, with a bonus for
	  gnomes (from GruntHack)
	* One-eyed Sam is tougher and it's harder to steal from the black market
	* Nazgul scream attack added, with limited range (from UnNetHackPlus, based
	  on code from SporkHack)
	* Skill gain for spells is faster than skill gain for weapons
	* Aleaxes are created with exact copies (barring artifacts) of your
	  wielded weapons and armor (provided they are actual weapons); when
	  your own god sends a hostile monster, it will always be an Aleax (by L)
	* Applying certain wands has a chance of creating a related trap
	* Remove bonus for role special spells
	* Luckstones dramatically slow luck timeout instead of preventing it
	  completely. Blessed luckstones slow the timeout of positive luck,
	  cursed luckstones negative luck, and uncursed luckstones both.
	* It is impossible to know both the speed and location of a quantum mechanic
	* Replace Sokoban's Amulet of ESP with an Amulet of Flying
	

	* Artifact changes:
	  - From SporkHack:
	    - All the weapons below warn against and have 20% instakill chance 
	      against their target monsters.
	    - Dragonbane is now a dwarvish spear that conveys fire, cold, shock,
	      acid, poison, acid, and disintegration resistance while wielded.
	    - Giantslayer is now a sling that gives 18/** STR while wielded or
	      in the alternate weapon slot.
	    - Werebane conveys polymorph control while wielded.
	    - Ogresmasher gives 25 CON while wielded.
	    - Trollsbane prevents trolls from leaving corpses while wielded.
	  - Other:
	    - Luck Blade added, first sacrifice gift for Convicts
	    - Grimtooth is the first sacrifice gift for Rogues; it is now
	      permanently poisoned and grants poison resistance while wielded
	    - The Longbow of Diana gives +1 multishot and +1 damage bonus when